--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,17 @@
 # Veritabanı
-DATABASE_URL=postgresql://user:password@localhost:5432/azhoroscope
+# SQLite (Geliştirme): file:./dev.db
+# PostgreSQL (Üretim): postgresql://USER:PASSWORD@HOST:PORT/DATABASE
+DATABASE_URL="file:./dev.db"
 
-# NextAuth
-NEXTAUTH_SECRET=your-secret-key-here
-NEXTAUTH_URL=http://localhost:3000
+# NextAuth Ayarları
+# openssl rand -base64 32 komutu ile oluşturulabilir
+NEXTAUTH_SECRET="gizli-anahtar-buraya-yazilacak"
+NEXTAUTH_URL="http://localhost:3000"
+
+# Google OAuth
+# https://console.cloud.google.com adresinden oluşturulur
+GOOGLE_CLIENT_ID="google-client-id"
+GOOGLE_CLIENT_SECRET="google-client-secret"
 
 # Google Gemini API
 GEMINI_API_KEY=your-gemini-api-key-here
