feat(astrology): implement birth chart calculation using astronomy-engine

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@google/genai": "^1.38.0",
     "@prisma/client": "^6.4.1",
     "@radix-ui/react-slot": "^1.2.4",
+    "astronomy-engine": "^2.1.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
